# TimingTracer

./: .gitignore  README.md  pyproject.toml  test.py
.tmp/nvim-99/: 99-1676-prompt  99-3433-prompt  99-3662-prompt  99-3693-prompt  99-581-prompt  99-6300-prompt  99-7463-prompt  99-9856-prompt
src/timingtracer/: __init__.py  timetracer.py
